--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -11,11 +11,13 @@
     "@vscode/webview-ui-toolkit": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "scripture-tsv": "^1.1.0"
+    "dompurify": "^3.0.9",
+    "marked": "^12.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/dompurify": "^3.0.5",
     "@types/vscode-webview": "^1.57.5",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
