--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "translation-notes-extension-webview",
+  "name": "checking-extension-webview",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,15 +9,16 @@
   },
   "dependencies": {
     "@vscode/webview-ui-toolkit": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "checking-tool-rcl": "file:.yalc/checking-tool-rcl",
     "dompurify": "^3.0.9",
-    "marked": "^12.0.0"
+    "marked": "^12.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@types/dompurify": "^3.0.5",
     "@types/vscode-webview": "^1.57.5",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
