--- a/package.json
+++ b/package.json
@@ -39,17 +39,26 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "pnpm run compile && pnpm run lint",
-    "lint": "eslint src --ext ts"
+    "lint": "eslint src --ext ts",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@types/glob": "^7.1.3",
+    "@types/jest": "^29.5.12",
     "@types/node": "^12.11.7",
     "@types/vscode": "^1.46.0",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "glob": "^7.1.6",
+    "jest": "^29.7.0",
     "prettier": "^2.2.1",
+    "ts-jest": "^29.1.5",
     "typescript": "^5.3.3",
     "vscode-test": "^1.5.0"
   },
@@ -57,7 +66,6 @@
     "@vscode/codicons": "^0.0.35",
     "bible-reference-range": "^1.1.1",
     "checking-tool-rcl": "file:.yalc/checking-tool-rcl",
-    "fs-extra": "^11.2.0",
     "ospath": "^1.2.2",
     "path-extra": "^4.3.0",
     "tc-source-content-updater": "^1.4.24"
