--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "install:all": "pnpm install && cd webview-ui && pnpm install",
     "start:webview": "cd webview-ui && pnpm run start",
     "build:webview": "cd webview-ui && pnpm run build",
+    "build:webview-debug": "cd webview-ui && pnpm run build:dev",
     "vscode:prepublish": "pnpm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
@@ -68,8 +69,9 @@
   "dependencies": {
     "@vscode/codicons": "^0.0.35",
     "bible-reference-range": "^1.1.1",
+    "fs-extra": "^11.2.0",
     "ospath": "^1.2.2",
-    "path-extra": "^4.3.0",
-    "tc-source-content-updater": "^1.4.24"
+    "tc-source-content-updater": "^1.4.24",
+    "usfm-js": "^3.4.2"
   }
 }
