--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "cross-env MINIFY=true npm run buildSub",
+    "build:dev": "cross-env MINIFY=true npm run buildSub",
+    "buildSub": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,6 +23,7 @@
     "@types/react-dom": "^18.2.18",
     "@types/vscode-webview": "^1.57.5",
     "@vitejs/plugin-react": "^4.2.1",
+    "cross-env": "^7.0.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
