--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "checking-extension.initCheckerTN",
-        "title": "Init Checker tN"
-      },
-      {
-        "command": "checking-extension.initCheckerTW",
-        "title": "Init Checker tW"
+        "command": "checking-extension.initTranslationChecker",
+        "title": "Init Translation Checker"
       }
     ],
     "customEditors": [
@@ -67,6 +63,9 @@
     "vscode-test": "^1.5.0"
   },
   "dependencies": {
+    "@types/glob": "^7.1.3",
+    "@types/node": "^12.11.7",
+    "@types/vscode": "^1.46.0",
     "@vscode/codicons": "^0.0.35",
     "bible-reference-range": "^1.1.1",
     "fs-extra": "^11.2.0",
