fixing save of selections

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/vscode": "^1.46.0",
     "@vscode/codicons": "^0.0.35",
     "bible-reference-range": "^1.1.1",
+    "deep-equal": "1.0.1",
     "fs-extra": "^11.2.0",
     "ospath": "^1.2.2",
     "tc-source-content-updater": "^1.4.24",
