--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@vscode/webview-ui-toolkit": "^1.4.0",
-    "checking-tool-rcl": "0.9.4",
+    "checking-tool-rcl": "0.9.5-beta",
     "dompurify": "^3.0.9",
     "marked": "^12.0.0",
     "react": "^18.2.0",
