improve error checking. Windows support.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "checking-extension-extension",
-  "displayName": "checking-extension-extension",
+  "name": "checking-extension",
+  "displayName": "checking-extension",
   "description": "A vscode extension to open translation note tsv files and display them for a specific verse",
   "version": "0.0.2",
   "engines": {
