--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "vscode": "^1.75.0"
   },
   "main": "./out/extension.js",
+  "activationEvents": [
+  ],
   "contributes": {
     "commands": [
       {
