--- a/package.json
+++ b/package.json
@@ -1,81 +1,41 @@
 {
   "name": "checking-extension",
   "displayName": "checking-extension",
-  "description": "A vscode extension to open translation note tsv files and display them for a specific verse",
-  "version": "0.0.2",
+  "description": "",
+  "version": "0.0.1",
   "engines": {
-    "vscode": "^1.75.0"
+    "vscode": "^1.91.0"
   },
-  "main": "./out/extension.js",
-  "activationEvents": [
+  "categories": [
+    "Other"
   ],
+  "activationEvents": [],
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "checking-extension.initTranslationChecker",
-        "title": "Translation Checking Tool: Initialize Project"
-      }
-    ],
-    "customEditors": [
-      {
-        "viewType": "checking-extension.translationChecker",
-        "displayName": "Translation Checking Tool: Make Selections for Translation Words and Notes",
-        "selector": [
-          {
-            "filenamePattern": "*.twl_check"
-          },
-          {
-            "filenamePattern": "*.tn_check"
-          }
-        ],
-        "priority": "default"
+        "command": "checking-extension.helloWorld",
+        "title": "Hello World"
       }
     ]
   },
   "scripts": {
-    "install:all": "pnpm install && cd webview-ui && pnpm install",
-    "build:all": "pnpm run build:webview && pnpm run compile",
-    "start:webview": "cd webview-ui && pnpm run start",
-    "build:webview": "cd webview-ui && pnpm run build",
-    "build:webview-debug": "cd webview-ui && pnpm run build:dev",
     "vscode:prepublish": "pnpm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "pnpm run compile && pnpm run lint",
     "lint": "eslint src --ext ts",
-    "test": "jest"
+    "test": "vscode-test"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@types/glob": "^7.1.3",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^12.11.7",
-    "@types/vscode": "^1.46.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.56.0",
-    "glob": "^7.1.6",
-    "jest": "^29.7.0",
-    "prettier": "^2.2.1",
-    "ts-jest": "^29.1.5",
-    "typescript": "^5.3.3",
-    "vscode-test": "^1.5.0"
-  },
-  "dependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/node": "^12.11.7",
-    "@types/vscode": "^1.46.0",
-    "@vscode/codicons": "^0.0.35",
-    "bible-reference-range": "^1.1.1",
-    "deep-equal": "1.0.1",
-    "fs-extra": "^11.2.0",
-    "ospath": "^1.2.2",
-    "tc-source-content-updater": "^1.4.25",
-    "usfm-js": "^3.4.2",
-    "yamljs": "^0.3.0"
+    "@types/vscode": "^1.91.0",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "20.x",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.11.0",
+    "eslint": "^8.57.0",
+    "typescript": "^5.4.5",
+    "@vscode/test-cli": "^0.0.9",
+    "@vscode/test-electron": "^2.4.0"
   }
 }
