--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,9 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				"--folder-uri",
+				"file:///home/kintsoogi/code/vscode_extensions/translation-project"
 			],
 			"outFiles": [
 				"${workspaceFolder}/out/**/*.js"
