--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,10 @@
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
-	"exclude": ["node_modules", ".vscode-test", "webview-ui/src/*"]
+	"exclude": [
+		"node_modules",
+		".vscode-test",
+		"webview-ui/*",
+		"src/__tests__/*"
+	]
 }
