--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "checking-extension",
   "displayName": "checking-extension",
   "description": "A vscode extension to open translation note tsv files and display them for a specific verse",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "publisher": "unfoldingWord",
   "engines": {
     "vscode": "^1.91.0"
   },
