--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "categories": [
     "Other"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/unfoldingWord-box3/checking-extension"
+  },
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
@@ -36,17 +40,20 @@
     ]
   },
   "scripts": {
-    "install:all": "pnpm install && cd webview-ui && pnpm install",
+    "install:all": "pnpm run install:webview && pnpm install",
+    "install:webview": "pnpm install && cd webview-ui",
     "build:all": "pnpm run build:webview && pnpm run compile",
     "start:webview": "cd webview-ui && pnpm run start",
     "build:webview": "cd webview-ui && pnpm run build",
     "build:webview-debug": "cd webview-ui && pnpm run build:dev",
-    "vscode:prepublish": "pnpm run compile",
+    "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "pnpm run compile && pnpm run lint",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "prepackage:extension": "pnpm run install:webview && pnpm run build:webview",
+    "package:extension": "npm install && vsce package"
   },
   "devDependencies": {
     "@types/vscode": "^1.91.0",
@@ -60,6 +67,8 @@
     "bible-reference-range": "^1.1.1",
     "deep-equal": "1.0.1",
     "eslint": "^8.57.0",
+    "eslint-config-eslint": "^11.0.0",
+    "eslint-plugin-jsdoc": "^48.10.1",
     "fs-extra": "^11.2.0",
     "ospath": "^1.2.2",
     "tc-source-content-updater": "^1.4.25",
