add welcome view

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,14 +9,19 @@
 			"name": "Run Extension",
 			"type": "extensionHost",
 			"request": "launch",
+			"args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+			"outFiles": ["${workspaceFolder}/out/**/*.js"],
+			"preLaunchTask": "${defaultBuildTask}"
+		},
+		{
+			"name": "Extension Tests",
+			"type": "extensionHost",
+			"request": "launch",
 			"args": [
 				"--extensionDevelopmentPath=${workspaceFolder}",
-				"--folder-uri",
-				"file:///home/kintsoogi/code/vscode_extensions/translation-project"
+				"--extensionTestsPath=${workspaceFolder}/out/test/suite/index"
 			],
-			"outFiles": [
-				"${workspaceFolder}/out/**/*.js"
-			],
+			"outFiles": ["${workspaceFolder}/out/test/**/*.js"],
 			"preLaunchTask": "${defaultBuildTask}"
 		}
 	]
