--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,15 +17,32 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Read version and commit sha
+        run: |
+          echo "HASH=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
+          echo "APP_VERSION=$(node -p -e "require('./package.json').version")" >> $GITHUB_ENV
+          echo "APP_NAME=$(node -p -e "require('./package.json').name")" >> $GITHUB_ENV
+
       - name: Install pnpm
         run: npm install --global pnpm
       - run: pnpm --version
 
       - name: Install and build webview
-        run: npm run prepackage:extension
+        run: npm run pre-package:extension
 
       - name: Install vsce
         run: npm install -g  @vscode/vsce
 
       - name: Package Extension
         run: npm run package:extension
+
+      - name: Set artifact name
+        run: echo "ARTIFACT_NAME=$(echo "$APP_NAME-$APP_VERSION-$HASH.vsix")" >> $GITHUB_ENV
+        
+      - uses: actions/upload-artifact@v3
+        name: Upload Package
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ./checking-extension-*.vsix
+
