working on workflow

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checking-extension",
   "displayName": "checking-extension",
   "description": "A vscode extension to open tn_check and twl_check files for checking verses",
-  "version": "0.0.6-beta.3",
+  "version": "0.0.6-beta.4",
   "publisher": "unfoldingWord",
   "engines": {
     "vscode": "^1.91.0"
@@ -25,22 +25,22 @@
       {
         "title": "Translation Checking Tool: Initialize Checking Workflow",
         "command": "checking-extension.launchWorkflow",
-        "category": "Checking Tool Project Management"
+        "category": "Project Management"
       },
       {
         "title": "Translation Checking Tool: Create New Folder",
         "command": "checking-extension.createNewFolder",
-        "category": "Checking Tool Project Management"
+        "category": "Project Management"
       },
       {
         "title": "Translation Checking Tool: Select Folder",
         "command": "checking-extension.selectFolder",
-        "category": "Checking Tool Project Management"
+        "category": "Project Management"
       },
       {
         "title": "Translation Checking Tool: Select Gateway Language",
         "command": "checking-extension.selectGL",
-        "category": "Checking Tool Project Management"
+        "category": "Project Management"
       }
     ],
     "customEditors": [
@@ -74,10 +74,6 @@
             "id": "openFolder",
             "title": "Open Project Folder",
             "description": "First, let's open a folder where your new Codex project will be initialized.\n[Open Project Folder](command:checking-extension.selectFolder)\n[Create New Project Folder](checking-extension.createNewFolder)",
-            "media": {
-              "image": "./src/media/folder-active.png",
-              "altText": "Open Project Folder"
-            },
             "completionEvents": [
               "onFolderSelected"
             ],
@@ -87,10 +83,6 @@
             "id": "selectNewFolder",
             "title": "Select New Project Folder",
             "description": "First, let's open a folder where your new Codex project will be initialized.\n[Open Project Folder](command:checking-extension.selectFolder)\n[Create New Project Folder](checking-extension.createNewFolder)",
-            "media": {
-              "image": "./src/media/folder-active.png",
-              "altText": "Open Project Folder"
-            },
             "completionEvents": [
               "onFolderSelected"
             ],
@@ -100,13 +92,9 @@
             "id": "selectGatewayLanguage",
             "title": "Select gateway Language",
             "description": "Now that we have a folder, let's choose the Gateway Language project.\n[Select gateway Language](command:codex-project-manager.nameProject)",
-            "media": {
-              "image": "./src/media/name-project.png",
-              "altText": "Name Project"
-            },
             "completionEvents": [
               "onCommand:codex-project-manager.nameProject"
-            ],
+            ]
           }
         ]
       }
