--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
       {
         "title": "Translation Checking Tool: Initialize Checking Workflow",
         "command": "checking-extension.launchWorkflow",
-        "category": "Project Management"
+        "category": "Checking Tool Project Management"
       },
       {
         "title": "Translation Checking Tool: Create New Folder",
         "command": "checking-extension.createNewFolder",
-        "category": "Project Management"
+        "category": "Checking Tool Project Management"
       },
       {
         "title": "Translation Checking Tool: Select Folder",
         "command": "checking-extension.selectFolder",
-        "category": "Project Management"
+        "category": "Checking Tool Project Management"
       },
       {
         "title": "Translation Checking Tool: Select Gateway Language",
         "command": "checking-extension.selectGL",
-        "category": "Project Management"
+        "category": "Checking Tool Project Management"
       }
     ],
     "customEditors": [
@@ -74,6 +74,10 @@
             "id": "openFolder",
             "title": "Open Project Folder",
             "description": "First, let's open a folder where your new Codex project will be initialized.\n[Open Project Folder](command:checking-extension.selectFolder)\n[Create New Project Folder](checking-extension.createNewFolder)",
+            "media": {
+              "image": "./src/media/folder-active.png",
+              "altText": "Open Project Folder"
+            },
             "completionEvents": [
               "onFolderSelected"
             ],
@@ -83,6 +87,10 @@
             "id": "selectNewFolder",
             "title": "Select New Project Folder",
             "description": "First, let's open a folder where your new Codex project will be initialized.\n[Open Project Folder](command:checking-extension.selectFolder)\n[Create New Project Folder](checking-extension.createNewFolder)",
+            "media": {
+              "image": "./src/media/folder-active.png",
+              "altText": "Open Project Folder"
+            },
             "completionEvents": [
               "onFolderSelected"
             ],
@@ -92,6 +100,10 @@
             "id": "selectGatewayLanguage",
             "title": "Select gateway Language",
             "description": "Now that we have a folder, let's choose the Gateway Language project.\n[Select gateway Language](command:codex-project-manager.nameProject)",
+            "media": {
+              "image": "./src/media/name-project.png",
+              "altText": "Name Project"
+            },
             "completionEvents": [
               "onCommand:codex-project-manager.nameProject"
             ]
