--- a/package.json
+++ b/package.json
@@ -71,41 +71,39 @@
         "description": "A checking workflow",
         "steps": [
           {
-            "id": "openFolder",
-            "title": "Open Project Folder",
-            "description": "First, let's open a folder where your new Codex project will be initialized.\n[Open Project Folder](command:checking-extension.selectFolder)\n[Create New Project Folder](checking-extension.createNewFolder)",
+            "id": "selectFolder",
+            "title": "Select Project Folder",
+            "description": "First, let's open a folder where your new Codex project will be initialized.\n[Select Project Folder](command:checking-extension.selectFolder)",
             "media": {
               "image": "./src/media/folder-active.png",
-              "altText": "Open Project Folder"
+              "altText": "Select Project Folder"
             },
             "completionEvents": [
-              "onFolderSelected"
-            ],
-            "when": "workbenchState == empty"
-          },
-          {
-            "id": "selectNewFolder",
-            "title": "Select New Project Folder",
-            "description": "First, let's open a folder where your new Codex project will be initialized.\n[Open Project Folder](command:checking-extension.selectFolder)\n[Create New Project Folder](checking-extension.createNewFolder)",
-            "media": {
-              "image": "./src/media/folder-active.png",
-              "altText": "Open Project Folder"
-            },
-            "completionEvents": [
-              "onFolderSelected"
-            ],
-            "when": "workbenchState != empty"
+              "onContext: selectedFolder"
+            ]
           },
           {
             "id": "selectGatewayLanguage",
             "title": "Select gateway Language",
-            "description": "Now that we have a folder, let's choose the Gateway Language project.\n[Select gateway Language](command:codex-project-manager.nameProject)",
+            "description": "Now that we have a folder, let's choose the Gateway Language options.\n[Select gateway Language](command:checking-extension.selectGL)",
             "media": {
               "image": "./src/media/name-project.png",
               "altText": "Name Project"
             },
             "completionEvents": [
-              "onCommand:codex-project-manager.nameProject"
+              "onContext: selectedGL"
+            ]
+          },
+          {
+            "id": "loadGlResources",
+            "title": "Download Gateway Language Resources",
+            "description": "Now that we have selected a Gateway Language, let's download the checking resources.\n[Download Resources](command:checking-extension.loadGlResources)",
+            "media": {
+              "image": "./src/media/name-project.png",
+              "altText": "Name Project"
+            },
+            "completionEvents": [
+              "onContext: loadedGL"
             ]
           }
         ]
