--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
       {
         "id": "initChecking",
         "title": "Initialize Checking",
-        "description": "A checking workflow",
+        "description": "A checking workflow.\nTo clear the workflow, do `CTRL-SHFT-P` (on Mac do`CMD-SHFT-P`) and select `Developer: Reset Welcome Page Walkthrough Progress`",
         "steps": [
           {
             "id": "selectFolder",
@@ -123,9 +123,9 @@
             ]
           },
           {
-            "id": "selectTargetLanguage",
-            "title": "Select target Language",
-            "description": "Now that we have Gateway Language Resources, let's choose the Target Language.\n[Select Target Language](command:checking-extension.selectTarget)",
+            "id": "selectTargetBible",
+            "title": "Select Target Bible",
+            "description": "Now that we have Gateway Language Resources, let's choose the Target Bible.\n[Select Target Bible](command:checking-extension.selectTargetBible)",
             "media": {
               "image": "./src/media/name-project.png",
               "altText": "Select target Language"
@@ -138,8 +138,8 @@
           },
           {
             "id": "loadTarget",
-            "title": "Download Target Language",
-            "description": "Now that we have selected a Target Language, let's download the Target Language.\n[Download Target Language](command:checking-extension.loadTarget)",
+            "title": "Download Target Bible",
+            "description": "Now that we have selected a Target Bible, let's download the Target Bible.\n[Download Target Bible](command:checking-extension.loadTargetBible)",
             "media": {
               "image": "./src/media/name-project.png",
               "altText": "Download Target Language"
